# INSTA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml  imgui.ini  run.sh  run_transfer.sh  transfer.py
configs/nerf/: insta.json  main.json  transfer.json
data/: README
flame_masks/: boundary.txt  eye_region.txt  face.txt  forehead.txt  left_ear.txt  left_eye_region.txt  left_eyeball.txt  lips.txt  neck.txt  nose.txt  right_ear.txt  right_eye_region.txt  right_eyeball.txt  scalp.txt  smplx_flame.txt
include/rta/: affine.cuh  common.h  core.h  debug.h  flame.h  helpers.h  masking.h  nn.h  recorder.h  tiny_mesh.h
instant-ngp/: CMakeLists.txt
instant-ngp/include/neural-graphics-primitives/: bounding_box.cuh  bvh.cuh  common.h  common_device.cuh  nerf.h  nerf_loader.h  nerf_network.h  nerf_network_color.h  nerf_network_mapper.h  nerf_network_scaling.h  sdf.h  takikawa_encoding.cuh  testbed.h  triangle.cuh  triangle_bvh.cuh
instant-ngp/src/: camera_path.cu  nerf_loader.cu  render_buffer.cu  testbed.cu  testbed_nerf.cu  testbed_sdf.cu  triangle_bvh.cu
scripts/: environment.yml  generate.sh  install.sh  postprocess.py  simplification.py  transforms.py
scripts/patches/: face-parsing  matting
scripts/topology/: average.npy  flame_vertices_mask.npy  head_idxs.npy  template_face_sparse.npy
src/: core.cu  flame.cu  main.cu  masking.cpp  nn.cu  recorder.cu  tiny_mesh.cu
